<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestHome">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:text="@string/manuellement"
        android:textColor="#B9D1E1"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="458dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:text="@string/le_test_s_effectue"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="458dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_marrer_le_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appuyez_sur_le_bouton_ci_dessus_pour_d_marrer_le_test"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:text="@string/attentionz"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="439dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cela veut dire que vous devrez "
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="482dp" />

</androidx.constraintlayout.widget.ConstraintLayout>